--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:oracle:thin:@localhost:1521:orcl
     username: c
-    password: cch
+    password: cch1
 mybatis-plus:
   global-config:
     db-config:
